--- a/scripts/datarock_code_challenge.qmd
+++ b/scripts/datarock_code_challenge.qmd
@@ -4,17 +4,18 @@ author: "Matt Clauson"
 date: "`r Sys.Date()`"  
 output:
   html_document:
-    code_folding: hide      
+    code-fold: true      
     toc: true               
     toc_float: true         
     toc_depth: 3
 execute: 
-  cache: refresh
+  cache: true
+
 ---
 
 # Introduction
 
-Investigate data and screen models for clasification. 
+Investigate data and screen models for classification. 
 
 ```{r setup}
 
@@ -28,7 +29,7 @@ library(cmdstanr)
 library(rsample)
 
 ## ggplot theme
-theme_mc <- function(base_size = 16) {
+theme_mc <- function(base_size = 20) {
     theme_bw(base_size = base_size) %+replace%
         theme(
             # margins
@@ -141,7 +142,7 @@ multi_metric <- yardstick::metric_set(yardstick::rsq, yardstick::mae, yardstick:
 ```
 
 ```{r}
-data_for_distribution <- read_csv("~/Personal/graddip_math_stat/code_challenge/datarock/data/data_for_distribution.csv")
+data_for_distribution <- read_csv(here("data/data_for_distribution.csv"))
 ```
 
 # Cleaning 
@@ -150,16 +151,16 @@ data_for_distribution <- read_csv("~/Personal/graddip_math_stat/code_challenge/d
 vis_dat(data_for_distribution)
 ```
 
-First thing Au is character, As has large amount missing.
+First thing, `Au` is character, `As` has large amount missing.
 
 ```{r}
 df <- data_for_distribution %>% 
   mutate(Au = as.numeric(Au))
 ```
 
-Converting to numeric introduces NAs for Au, checking due to LOD (<), symbol needs to be dealt with. 
+Converting to numeric introduces NAs for `Au`, checking due to LOD (<), symbol needs to be dealt with. 
 
-Convert Au to numeric, and check for default values. 
+Convert `Au` to numeric, and check for default values. 
 
 ```{r}
 df <- data_for_distribution %>% 
@@ -172,7 +173,7 @@ Quick check for defaults e.g. -99. Can't have negative values for assays.
 vis_expect(df %>% select(where(is.numeric)), ~.x >= 0) # only interested in numeric (not strictly from/to)
 ```
 
-Check compositing of the drill holes
+Check compositing of the drill holes length.
 
 ```{r}
 df %>%
@@ -186,7 +187,7 @@ df %>%
   filter(mean_length != 10)
 ```
 
-Check for duplicate ID 
+Check for duplicate IDs.
 
 ```{r}
 df %>%
@@ -195,7 +196,7 @@ df %>%
                    .names = "percent_unique_{col}"))
 ```
 
-Check Classes 
+Check Classes.
 
 ```{r}
 df %>%
@@ -206,7 +207,7 @@ df %>%
 
 Missing class label for ~16% of the rows. 
 
-Replace default values and ? with NA and view relationship to missing classes.
+Replace default values and `?` with NA and view relationship to missing classes.
 
 ```{r}
 df <- df %>%
@@ -221,18 +222,18 @@ naniar::gg_miss_var(df, show_pct = TRUE, facet = Class)
 
 ### Summary
 
-- from/to & sampleid are complete.
-- Replace LOD Au values with LOD/2 as a quick fix.
+- `from/to` & `sampleid` are complete.
+- Replace LOD `Au` values with LOD/2 as a quick fix.
 - Default values replaced with NA.
-- ? Class replaced with NA to make the missingness clearer. 
+- `?` Class replaced with NA to make the missingness clearer. 
 
 # EDA
 
 Check normality, distribution, PCA, CoDA.
 
-Removal of ? and other NA values.
+Removal of `?` and other NA values.
 
-Dropping the ? Class rows as these can't be used for training the model.
+Dropping the `?` Class rows as these can't be used for training the model.
 Dropping NA from the assays as without more information struggling to justify imputing data or removal of column.
 
 ```{r}
@@ -287,9 +288,9 @@ n_df %>%
 ## CoDA PCA
 
 - Plot shows strong zonation in the first two principal components.
-- Pb, Au, Mo strongly correlated more associated with Class A.
-- Cu, Fe, Zn are positively correlated, weaker positively correlated to As & negatively correlated to Pb, Au, Mo. Associated with Class B.
-- S orthogonal to other elements, indicating no correlation also appears to have little relationship to Class.
+- `Pb`, `Au`, `Mo` strongly correlated more associated with Class A.
+- `Cu`, `Fe`, `Zn` are positively correlated, weaker positively correlated to `As` & negatively correlated to `Pb`, Au, Mo. Associated with Class B.
+- `S` orthogonal to other elements, indicating no correlation also appears to have little relationship to Class.
 
 
 ```{r}
@@ -311,9 +312,9 @@ Rather than go down the ILR and single binary partition plots, going to use log-
 
 ## Log Ratio Analysis
 
-As is only in one of the log-ratios, might be able to remove this column which would allow more data to be kept for training the model without affecting the overall model too much.
+The element `As` is only in one of the log-ratios, might be able to remove this column which would allow more data to be kept for training the model without affecting the overall model too much.
 
-Otherwise curiously the Fe appears to be important.
+Otherwise curiously the `Fe` appears to be important.
 
 ```{r}
 lr_res <- easyCODA::STEP(n_df)
@@ -379,7 +380,11 @@ print(mod1_hs)
 
 # PP Check
 pp_check(mod1_hs)
+```
 
+Refit model with reduced variables.
+
+```{r}
 # refit model
 mod2_simple <- brm(
   Class ~ pb_fe + as_mo + au_fe,
@@ -393,6 +398,8 @@ mod2_simple <- brm(
   threads = threading(4),
   control = list(adapt_delta = 0.9, max_treedepth = 12)
 )
+
+print(mod2_simple)
 
 pp_check(mod2_simple, type = "bars")
 
@@ -422,7 +429,7 @@ f score is okay, looks like might be suffering from class imbalance which might 
 
 ## Black Box 
 
-Screen many models.
+Screen many models to assess if classification is viable.
 
 ```{r}
 library(tidymodels)
@@ -521,6 +528,8 @@ ggplot(rankings, aes(x = rank, y = mean, color = model, shape = method)) +
   geom_text(aes(label = wflow_id), vjust = -0.5, size = 3) +  # Add labels
   labs(x = "rank", y = "F-Score", title = "Model Performance by F-Score")
 ```
+
+Bagged tree classifies quite well but could be overfitting? Interestingly, dimension reduction techniques don't appear to be helpful for this problem.
 
 # Conclusion
 
